Align with Spring Boot example

--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
             </dependency>
             <dependency>
                 <groupId>io.cucumber</groupId>
-                <artifactId>cucumber-junit</artifactId>
+                <artifactId>cucumber-junit-platform-engine</artifactId>
                 <version>6.8.1</version>
                 <scope>test</scope>
             </dependency>
