--- a/src/test/resources/app.properties
+++ b/src/test/resources/app.properties
@@ -1,5 +1,7 @@
 #Properties
-#Sun Oct 11 01:38:31 CEST 2020
+#Mon Oct 12 13:42:14 CEST 2020
+project.build.sourceEncoding=UTF-8
 headless=false
 browser=CHROME
-project.build.sourceEncoding=UTF-8
+remoteDriver=false
+DOCKERURL = http:localhost:4444/wd/hub
